--- a/a/an/ana/analytics.blogspot.com.html
+++ b/a/an/ana/analytics.blogspot.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the analytics.blogspot.com privacy policy that was archived on 2006-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20061230091921id_/http%3A//www.google.com/intl/en/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the analytics.blogspot.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228142412id_/http%3A//www.google.com/intl/en/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="stylesheet" href="google.css">
 <style>
 	  	  <!--
 body,td,div,p,a,font,span{font-family:arial,sans-serif;}
-//-->
+-->
           </style>
 <title>Google Privacy Center: Privacy Policy</title>
 </head>
@@ -32,7 +32,7 @@ body,td,div,p,a,font,span{font-family:arial,sans-serif;}
     <td> <p>  
       <small><a href="/">Home</a><br> 
       <br> 
-      <a href="/about.html">About&nbsp;Google</a><br> 
+      <a href="about.html">About&nbsp;Google</a><br> 
       <br> 
       <font color="003399"><b>Privacy&nbsp;Highlights</b></font><br> 
       <br> 
@@ -44,14 +44,20 @@ body,td,div,p,a,font,span{font-family:arial,sans-serif;}
       <br> 
       <br> 
       More privacy info:<br> 
+• <a href="http://www.google.com/intl/en/sketchup/3dwh/privacy.html">3D Warehouse</a><br>	  
 • <a href="http://desktop.google.com/privacypolicy.html">Desktop</a><br>
+• <a href="http://www.google.com/google-d-s/privacy.html">Docs</a><br>
 • <a href="http://gmail.google.com/gmail/help/privacy.html">Gmail</a><br> 
+• <a href="http://labs.google.com/goog411/">GOOG-411</a><br> 
 • <a href="http://groups-beta.google.com/googlegroups/privacy.html">Groups</a><br> 
+• <a href="http://maps.google.com/help/privacy_maps.html">Maps</a><br>
+• <a href="http://mobile.google.com/privacy.html">Mobile</a><br>
 • <a href="http://www.orkut.com/privacy.aspx">Orkut</a><br>
-• <a href="http://www.google.com/help/privacy_fusionph.html">Personalized Homepage</a><br>
+• <a href="http://www.google.com/help/privacy_fusionph.html">iGoogle</a><br>
 • <a href="http://www.google.com/searchhistory/privacy.html">Personalized Search</a><br>
 • <a href="http://www.googlestore.com/privacy.asp">Store</a> <br> 
-• <a href="http://www.google.com/talk/privacy.html">Talk</a><br> 
+• <a href="http://www.google.com/talk/privacy.html">Talk</a><br>
+• <a href="http://www.google.com/ads/gcc_privacy.html">Test Ad Server</a><br> 
 • <a href="http://www.google.com/support/toolbar/?quick=privacy">Toolbar for IE</a><br> 
 • <a href="http://www.google.com/support/toolbar/?quick=privacy&amp;v=2.0f">Toolbar for Firefox</a><br> 
 • <a href="http://video.google.com/support/bin/answer.py?answer=32170&amp;topic=1490">Video Player</a><br>
@@ -119,17 +125,14 @@ body,td,div,p,a,font,span{font-family:arial,sans-serif;}
 
 <b>More information</b>
 
-<p>For information about specific Google services, please check the relevant privacy notice in the navigation bar to the left. Google is a member of the <a href="http://www.export.gov/safeharbor/">EU/US Safe Harbor Program</a>.
+<p>For information about specific Google services, please check the relevant privacy notice in the navigation bar to the left, or check out the 
+<a href="http://www.google.com/support">Google Help</a> page. Google is a member of the EU/US Safe Harbor Program.
+</p>
+<p>
+For more information about our privacy practices, go to the full privacy policy. If you have additional questions regarding your privacy and Google, please contact us <a href="http://www.google.com/support/bin/request.py?contact_type=privacy">here</a>. Please note that we will not respond to inquiries not related to Google's Privacy Policy.
 </p>
 
-<p>For more information about our privacy practices, go to the <a href="privacypolicy.html">full privacy policy</a>. 
-If you have additional questions, please <a href="/support/bin/request.py?form_type=user&amp;stage=fm&amp;user_type=user&amp;contact_type=privacy&amp;hl=en">contact us</a> any time. Or write to us at:
-</p>
 
-Privacy Matters<br>
-c/o Google Inc.<br>
-1600 Amphitheatre Parkway<br>
-Mountain View CA 94043 (USA)
 
 </font>
       </div></td> 
@@ -137,10 +140,19 @@ Mountain View CA 94043 (USA)
   <tr> 
     <td valign="top"><img src="/images/art.gif" alt="" width="143" height="53" hspace="3" vspace="5"></td> 
     <td>&nbsp;</td> 
-    <td colspan="2"><div class="footer"> <small> ©2006 Google - <a href="/">Home</a> - <a href="/about.html">About Google</a> - <a href="privacy.html">Privacy
+    <td colspan="2"><div class="footer"> <small> ©2007 Google - <a href="/">Home</a> - <a href="/about.html">About Google</a> - <a href="privacy.html">Privacy
             Policy</a> - <a href="terms_of_service.html">Terms of Service</a> </small> </div></td> 
   </tr> 
 </tbody></table> 
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2486345-1";
+_utcp="/intl/en/";
+urchinTracker();
+</script>
+
 
 
 </body></html>
