--- a/p/pa/pag/pagetraffic.com.html
+++ b/p/pa/pag/pagetraffic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pagetraffic.com privacy policy that was archived on 2007-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070625113625id_/http%3A//www.pagetraffic.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pagetraffic.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228165826id_/http%3A//www.pagetraffic.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>PAGE TRAFFIC PRIVACY POLICY - A Search Engine Optimization Web Promotion</title>
@@ -13,12 +13,11 @@
 <body class="main-bg">
 <table width="778" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td height="57" colspan="2"><!-- ClickTale Top part -->
-<script type="text/javascript">
-var WRInitTime=(new Date()).getTime();
-</script>
-<!-- ClickTale end of Top part -->
-<a name="top" id="top"></a>
+    <td height="57" colspan="2"><!--[if lte IE 6]>
+<link href="style/dropdown-style_ie.css" rel="stylesheet" type="text/css" />
+<![endif]-->
+<div style="margin:0 auto 0 auto; width:778px;">
+<a name="top" id="top"></a> 
 <table width="778" border="0" align="center" cellpadding="0" cellspacing="0" class="borderall">
   <tbody><tr>
     <td height="4" bgcolor="#7EADD3"></td>
@@ -43,6 +42,7 @@ var WRInitTime=(new Date()).getTime();
         </tr>
     </tbody></table></td>
   </tr>
+  
   <tr>
     <td valign="top" bgcolor="#1C3859" height="1"></td>
   </tr>
@@ -50,29 +50,70 @@ var WRInitTime=(new Date()).getTime();
     <td valign="top" bgcolor="#B6CE46" height="4"></td>
   </tr>
   <tr>
-    <td height="28" valign="top" class="nav-img-bg"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+    <td height="28" valign="top" class="nav-img-bg">
+	
+	<div class="menucontainer" id="newheader">
+<div class="menu">
+	<table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr>
           <td width="70" height="28" align="center"><a href="/default.htm" class="nav">Home</a></td>
           <td width="2" align="center"><img src="/images/nave-divi.jpg" alt="Home" width="2" height="28"></td>
-          <td width="75" align="center"><a href="/search-engine-positioning.php" class="nav">Services</a></td>
+          <td width="82" align="center"><ul><li><a class="drop" href="/search-engine-positioning.php" target="_parent">Services<!--[if IE 7]><!-->
+</a>
+<!--<![endif]-->
+<table><tbody><tr><td>
+<ul><li><a href="/search-engine-optimization-positioning.php" target="_parent">Search Engine Optimization</a></li><li><a href="/pay-per-click-marketing.php" target="_parent">PPC Management</a></li><li><a href="/link-popularity-service.php" target="_parent">Link Building</a></li><li><a href="/offshore-team.php" target="_parent">Full Time Employee</a></li><li><a href="/copywriting-services.php" target="_parent">SEO Copywriting</a></li></ul></td></tr></tbody></table>
+<!--[if lte IE 6]>
+</a>
+<![endif]-->
+</li></ul></td>
           <td width="2" align="center"><img src="/images/nave-divi.jpg" alt="Services" width="2" height="28"></td>
           <td width="75" align="center"><a href="/clients.php" class="nav">Clients</a></td>
           <td width="2" align="center"><img src="/images/nave-divi.jpg" alt="Free Quote" width="2" height="28"></td>
-          <td width="80" align="center"><a href="/about-pagetraffic.php" class="nav">About Us </a></td>
+          <td width="84" align="center">
+<ul><li><a class="drop" href="/about-pagetraffic.php" target="_parent">About&nbsp;Us<!--[if IE 7]><!-->
+</a>
+<!--<![endif]-->
+<table><tbody><tr><td>
+<ul><li><a href="/team-management.php" target="_parent">Our Team Management</a></li><li><a href="/case-study.php" target="_parent">Case Studies</a></li><li><a href="memberships.php" target="_parent">Membership and Affiliation</a></li>
+<li><a href="/faq.php" target="_parent">Frequently Asked Questions</a></li><li><a href="/media-kit.php" target="_parent">Corporate Brochure</a></li><li><a href="/testimonials.php" target="_parent">Testimonials</a></li><li><a href="/career.php" target="_parent">Career with Page Traffic</a></li></ul></td></tr></tbody></table>
+<!--[if lte IE 6]>
+</a>
+<![endif]-->
+</li></ul>
+		  </td>
           <td width="2" align="center"><img src="/images/nave-divi.jpg" alt="Clients" width="2" height="28"></td>
-          <td width="90" align="center"><a href="/memberships.php" class="nav">Affiliations</a></td>
+          <td width="85" align="center"><a href="/memberships.php" class="nav">Affiliations</a></td>
           <td width="2" align="center"><img src="/images/nave-divi.jpg" alt="About Us" width="2" height="28"></td>
-          <td width="115" align="center"><a href="/search-engine-optimization-company.php" class="nav">Outsource SEO </a></td>
+          <td width="116" align="center"><ul><li><a class="drop" href="/search-engine-optimization-company.php" target="_parent">Outsource&nbsp;SEO<!--[if IE 7]><!-->
+</a>
+<!--<![endif]-->
+<table><tbody><tr><td>
+<ul>
+<li>
+<a href="/private-label-seo-reseller-program.php" target="_parent">Private Label Program</a>
+</li>
+<li>
+<a href="/seo-reseller-program.php" target="_parent">SEO Reseller Program</a>
+</li>
+<li>
+<a href="/seo-affiliate-program.php" target="_parent">Affiliate Program</a>
+</li>
+</ul></td></tr></tbody></table>
+<!--[if lte IE 6]>
+</a>
+<![endif]-->
+</li></ul></td>
           <td align="center"><img src="/images/nave-divi.jpg" alt="Guide" width="2" height="28"></td>
           <td align="center"><a href="/request-quote.php" class="nav">Free Quote </a></td>
           <td width="2" align="center"><img src="/images/nave-divi.jpg" alt="About Us" width="2" height="28"></td>
-          <td width="85" align="center"><a href="/contact-search-engine-specialist.php" class="nav">Contact Us </a></td>
+          <td align="center"><a href="/contact-search-engine-specialist.php" class="nav">Contact Us </a></td>
           <td width="2" align="center"><img src="/images/nave-divi.jpg" alt="Guide" width="2" height="28"></td>
-          <td align="center"><a href="http://blog.pagetraffic.com" class="nav">Blog </a></td>
+          <td align="center"><a href="http://www.pagetrafficblog.com" class="nav">Blog </a></td>
         </tr>
-    </tbody></table></td>
+    </tbody></table></div></div></td>
   </tr>
-</tbody></table></td>
+</tbody></table></div></td>
   </tr>
 </tbody></table>
 <table width="778" border="0" align="center" cellpadding="0" cellspacing="0" class="borderall">
@@ -177,12 +218,7 @@ var WRInitTime=(new Date()).getTime();
         <tr>
           <td width="11%" class="main-links-center"><img src="images/arrow-in2.jpg" alt="Search Engine Optimization" width="7" height="7"></td>
           <td colspan="2" class="main-links-left"><b><a href="/search-engine-optimization-positioning.php" class="left-nav">Search Engine Optimization</a></b></td>
-        </tr>
-        <tr>
-          <td class="main-links-center"><img src="images/arrow-in2.jpg" alt="Link Building Services" width="7" height="7"></td>
-          <td colspan="2" class="main-links-left"><b><a href="/link-popularity-service.php" class="left-nav">Link Building Services</a></b></td>
-        </tr>
-        <tr>
+        </tr><tr>
           <td class="main-links-center"><img src="images/arrow-in2.jpg" alt="Copywriting Services" width="7" height="7"></td>
           <td colspan="2" class="main-links-left"><b><a href="/copywriting-services.php" class="left-nav">Copywriting Services</a></b></td>
         </tr>
@@ -237,11 +273,11 @@ var WRInitTime=(new Date()).getTime();
                 <td align="left" valign="top" class="normal-white">Enter your email id below:</td>
               </tr>
               <tr>
-                <td><form action="/news.php" name="newsletter" method="post">
+                <td><form action="http://www.feedburner.com/fb/a/emailverifySubmit?feedId=544852" name="newsletter" method="post" target="_blank">
 		  <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tbody><tr>
                 <td><div align="left">
-                    <input name="nemail" type="text" class="text-normal">
+                    <input name="email" type="text" class="text-normal">
                 </div></td>
                 <td width="40"><input type="image" src="images/go-button.gif" alt="go"> </td>
               </tr>
@@ -281,15 +317,16 @@ var WRInitTime=(new Date()).getTime();
 		  <h5><a href="/sitemap.php" class="base-address">		  Site Map</a> | 
 		  <a href="/legal.php" class="base-address">Legal Disclaimer</a> | 
 		  <a href="/privacy-policy.php" class="base-address">Privacy Policy</a> | 
-		  <a href="/directory/index.html" class="base-address">Directory</a> | <a href="/guide.php" class="base-address">Guide</a> | <a href="/positioning-locations.php" class="base-address">SEO</a> | <a href="../career.php" class="base-address">Career</a><br>
-		  <strong><br>
-		  Active ingredients:</strong> <a href="http://validator.w3.org/check?uri=referer"> XHTML 1.0 </a> ( <a href="http://validator.w3.org:8001/check?uri=referer"> fussy </a>), <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS2</a><br>
+		  <a href="/directory/index.html" class="base-address">Directory</a> | <a href="/guide.php" class="base-address">Guide</a> | <a href="/positioning-locations.php" class="base-address">SEO</a> | <a href="../career.php" class="base-address">Career</a><br><br>
+		 <a href="/link-popularity-service.php" class="base-address">Link Building</a> | 
+		  <strong>
+		  Active ingredients:</strong> <a href="http://validator.w3.org/check?uri=referer"> XHTML 1.0 </a> ( <a href="http://validator.w3.org:8001/check?uri=referer"> fussy </a>), <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS2</a> <br>
 	  	    </h5>
 		  </td>
           <td><div align="center"><img src="/images/mail-box.jpg" alt="mail-box" width="51" height="40"></div></td>
           <td width="250" valign="top" class="footermap">
 		  <h5><strong>Offices in:</strong><br>
-              New Delhi, Mumbai, Chicago,<br>
+              New Delhi,  Chicago,<br>
               Illinois  Ph: 1-800-718-7603<br>
               Fax: (313) 481-6787<br></h5>
 		  </td>
@@ -302,7 +339,7 @@ var WRInitTime=(new Date()).getTime();
   <tbody><tr>
     <td><table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
         <tbody><tr align="center">
-          <td width="6%" align="left"><a href="http://www.webaward.org/winner.asp?eid=6588"><img src="/images/web-awards.jpg" alt="Web Awards" width="59" height="46" border="0"></a></td>
+          <td width="6%" align="left"><img src="/images/web-awards.jpg" alt="Web Awards" width="59" height="46" border="0"></td>
           <td width="6%" height="60" align="left"><img src="/images/w3cmember_small.gif" alt="W3C" width="53" height="35"></td>
           <td width="13%" height="60"><img src="/images/web-analytics_small.gif" alt="Web Analytics" width="106" height="50"></td>
           <td width="12%"><img src="/images/IIMA_small.gif" alt="IIMA" width="64" height="35"></td>
@@ -319,11 +356,6 @@ var WRInitTime=(new Date()).getTime();
           <td height="40" colspan="3" align="center">© 2002- 2007 <a href="http://www.pagetraffic.com" class="base-address">PAGE TRAFFIC - Search Engine Positioning Company</a>.<br>
 All Trademarks Acknowledged. </td>
         </tr>
-        <tr>
-          <td width="43%">&nbsp;</td>
-          <td align="center" valign="middle"><a href="http://www.webassured.com/c/Business_Background_Report.cfm?ID=502069"><img src="/images/walogo_rec.gif" alt="WebAssured" width="108" height="95" border="0"></a></td>
-          <td width="43%">&nbsp;</td>
-        </tr>
     </tbody></table></td>
   </tr>
 </tbody></table>
@@ -333,13 +365,7 @@ All Trademarks Acknowledged. </td>
 _uacct = "UA-670389-4";
 urchinTracker();
 </script>
-<!-- ClickTale Bottom part -->
-<div id="ClickTale" style="display: none;"></div>
-<script src="http://s.clicktale.net/WRa.js" type="text/javascript"></script>
-<script type="text/javascript">
-if(typeof ClickTale=='function') ClickTale(2201,0.2);
-</script>
-<!-- ClickTale end of Bottom part --></td>
+</td>
   </tr>
 </tbody></table>
 
