--- a/b/bl/blo/blogger.com.html
+++ b/b/bl/blo/blogger.com.html
@@ -1,11 +1,13 @@
-<!--The following is the downloaded HTML source of the blogger.com privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629233236id_/http%3A//www.blogger.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the blogger.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229075210id_/https%3A//www.blogger.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head>            <meta content="text/html; charset=utf-8" http-equiv="Content-type">         <title> Blogger: Blogger Privacy Notice </title>  <link href="/v-css/3241057453-blogger_lowend.css" type="text/css" rel="stylesheet"> <style type="text/css"><!--
-
-    @import url("/v-css/278764212-blogger_main.css");
-    @import url("/v-css/1877526874-flexible_buttons.css");
-    @import url("/v-css/898437004-buttons.css");
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html dir="ltr"><head><meta http-equiv="Content-type" content="text/html; charset=utf-8">
+<title>Blogger: Blogger Privacy Notice</title>
+<link href="/v-css/3241057453-blogger_lowend.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+    @import url("/v-css/3670199809-blogger_main.css");
+    @import url("/v-css/3846071064-buttons_dir.css");    
+    @import url("/v-css/4278204697-buttons.css");
 
     
 
@@ -13,11 +15,57 @@
       i{content:"\";/*" "*/}} @import url("/v-css/1784484781-blogger_ie5win.css"); /*";}
     }/* */
 
-  --> </style>    <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript"><!--
-
-    //--> </script> <script type="text/javascript"><!--
-
+  </style>
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+    </script> <script type="text/javascript">
       _uacct="UA-18003-7";
       _uanchor=1;
       urchinTracker();
-    //--> </script>     </head> <body>  <div id="header"> <div id="h2"> <div id="h3"> <a href="/" id="logo" title="Blogger home">        <img width="150" alt=" Blogger " src="/img/logo40.gif" height="40">     </a> <p id="tag"> <em>Push-Button Publishing</em> </p> <span class="r"></span> </div> </div> </div>  <div id="body"> <div id="main"> <div id="m2"> <div id="m3"> <h1>Blogger Privacy Notice</h1> <h2>October 14, 2005</h2> <p>The <a href="http://www.google.com/privacy.html" target="_blank">Google Privacy Policy</a> describes how we treat personal information when you use Google's products and services, including information provided when you use Blogger. In addition, the following describes our privacy practices that are specific to Blogger.</p> <h3>Personal information</h3> <ul type="disc"> <li>Google asks for some personal information when you sign up to use Blogger, including your email address and a password, which is used to protect your account from unauthorized access.</li> <li>In addition to publishing your weblog posts, you may also provide additional profile information, such as a photo, birthday, location, etc. and can edit your profile at any time on our <a href="/edit-profile.g" target="_blank">profile administration page.</a></li>  <li>If you choose to use our  <a href="http://help.blogger.com/bin/answer.py?answer=58226" target="_blank">  transliteration feature</a>, we will save your transliteration corrections, so that we can improve the service. </li>  <li>Google servers automatically record information about your use of the service, such as when you use Blogger and the frequency and size of data transfers. Information displayed or clicked in the Blogger interface (including UI elements, settings, and other information) is also recorded.</li> </ul> <h3>Uses</h3> <ul type="disc"> <li>Google stores and maintains your account information and copies of your weblog posts and comments, including drafts, in order to provide the service.</li> </ul> <h3>Your choices</h3> <ul type="disc"> <li>You can change your Blogger account settings, including your profile information, at any time in the Settings section of Blogger. You can edit, save drafts and remove your weblog posts at any time, as described in <a href="http://help.blogger.com/" target="_blank">Blogger Help</a>. </li> <li>If you delete your weblog, we will remove all posts from public view. Because of the way we maintain this service, residual copies of your profile information and other information associated with your account may remain on back-up media.</li> </ul> <h3>More information</h3> <p>Google adheres to the US Safe Harbor privacy principles. For more information about the Safe Harbor framework or our registration, see the <a href="http://www.export.gov/safeharbor/" target="_blank">web site</a> of the Department of Commerce.</p> <p>Further information about Blogger is available in <a href="http://help.blogger.com/" target="_blank">Blogger Help</a>. </p> <p>For more information about our privacy practices, go to <a href="http://www.google.com/privacypolicy.html" target="_blank">the full privacy policy</a>. If you have additional questions, please <a href="http://www.blogger.com/problem.g" target="_blank">contact us any time</a>. Or write to us at: </p> <blockquote> Privacy Matters<br> c/o Google Inc.<br> 1600 Amphitheatre Parkway<br> Mountain View CA 94043 (USA) </blockquote> </div> </div> </div>    <div id="footer"> <div> <hr> <p> <a href="/">Home</a> | <a href="/about">About</a> | <a href="http://buzz.blogger.com">Buzz</a> |  <a href="http://help.blogger.com/bin/static.py?page=start.cs">Help</a> | <a href="http://groups.google.com/group/blogger-help" title="Ask questions and share information with other users in the Blogger Help Group ">  Discuss</a>  | <a href="/language.g">Language</a>  | <a href="http://code.blogspot.com/">Developers</a> | <a href="http://www.googlestore.com/category.asp?catid=search&amp;searchtype=keyword&amp;search=blogger"> Gear</a>  <br> <a href="/terms.g">Terms of Service</a> | <a href="/privacy">Privacy</a> | <a href="/content.g">Content Policy</a> | Copyright © 1999 –     2007   Google </p> </div> </div>     </div>   </body></html>
+    </script> </head>
+<body><div id="header"><div id="h2"><div id="h3"><a href="/" id="logo" title="Blogger home"><img src="/img/logo40.gif" width="150" height="40" alt="Blogger"></a>
+<p id="tag"><em>Push-Button Publishing</em></p>
+<span class="r"></span></div></div></div>
+<div id="body"><div id="main"><div id="m2"><div id="m3"><h1>Blogger Privacy Notice</h1>
+<h2>October 9, 2007</h2>
+<p>The <a href="http://www.google.com/privacy.html" target="_blank">Google Privacy Policy</a> describes how we treat personal information when you use Google's products and services, including information provided when you use Blogger. In addition, the following describes our privacy practices that are specific to Blogger.</p>
+<h3>Personal information</h3>
+<ul type="disc"><li>Google asks for some personal information when you sign up to use Blogger, including your email address and a password, which is used to protect your account from unauthorized access.</li>
+<li>In addition to publishing your weblog posts, you may also provide additional profile information, such as a photo, birthday, location, etc. and can edit your profile at any time on our <a href="/edit-profile.g" target="_blank">profile administration page.</a></li>
+<li>If you choose to use our  <a href="http://help.blogger.com/bin/answer.py?answer=58226" target="_blank"> transliteration feature</a>, we will save your transliteration corrections, so that we can improve the service.</li>
+<li>Google servers automatically record information about your use of the service, such as when you use Blogger and the frequency and size of data transfers. Information displayed or clicked in the Blogger interface (including UI elements, settings, and other information) is also recorded. If you are logged in we may associate that information with your account.</li>
+<li>If you choose to use  <a href="http://go.blogger.com/" target="_blank"> Blogger Mobile</a>, we will record your phone number when you send a text message, photos, or SMS to or from Google. Your phone number may be associated with your  <a href="http://www.google.com/privacy_faq.html#account" target="_blank"> Google Account</a>  or, if you do not have a Google Account, with some other similar account ID. We often generate this account ID based on your device and hardware IDs, so if you change your device or hardware, you will have to re-associate this new device or hardware with your account before we can authenticate you.</li></ul>
+<h3>Uses</h3>
+<ul type="disc"><li>Google stores and maintains your account information and copies of your weblog posts and comments, including drafts, in order to provide the service.</li></ul>
+<h3>Your choices</h3>
+<ul type="disc"><li>You can change your Blogger account settings, including your profile information, at any time in the Settings section of Blogger. You can edit, save drafts and remove your weblog posts at any time, as described in <a href="http://help.blogger.com/" target="_blank">Blogger Help</a>.</li>
+<li>If you delete your weblog, we will remove all posts from public view. Because of the way we maintain this service, residual copies of your profile information and other information associated with your account may remain on back-up media.</li></ul>
+<h3>More information</h3>
+<p>Google adheres to the US Safe Harbor privacy principles. For more information about the Safe Harbor framework or our registration, see the <a href="http://www.export.gov/safeharbor/" target="_blank">web site</a> of the Department of Commerce.</p>
+<p>Further information about Blogger is available in <a href="http://help.blogger.com/" target="_blank">Blogger Help</a>.</p>
+<p>For more information about our privacy practices, go to <a href="http://www.google.com/privacypolicy.html" target="_blank">the full privacy policy</a>. If you have additional questions, please <a href="http://www.blogger.com/problem.g" target="_blank">contact us any time</a>. Or write to us at:</p>
+<blockquote>Privacy Matters<br> c/o Google Inc.<br> 1600 Amphitheatre Parkway<br> Mountain View CA 94043 (USA)</blockquote></div></div></div>
+<div id="footer"><div><hr>
+<p><a href="/">Home</a>
+|
+<a href="/about">About</a>
+|
+<a href="http://buzz.blogger.com">Buzz</a>
+|
+<a href="http://help.blogger.com/bin/static.py?page=start.cs">Help</a>
+|
+<a href="http://groups.google.com/group/blogger-help" title="Ask questions and share information with other users in the Blogger Help Group">Discuss</a>
+|
+<a href="/language.g">Language</a>
+|
+<a href="http://code.blogspot.com/">Developers</a>
+|
+<a href="http://www.googlestore.com/category.asp?catid=search&amp;searchtype=keyword&amp;search=blogger">Gear</a>
+<br>
+<a href="/terms.g">Terms of Service</a>
+|
+<a href="/privacy">Privacy</a>
+|
+<a href="/content.g">Content Policy</a>
+|
+<span dir="ltr">Copyright © 1999 – 2007 Google</span></p></div></div>
+</div></body></html>
